--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Sam"
-  avatar           : /assets/images/avatar.jpeg"
+  avatar           : "/assets/images/avatar.jpeg"
   bio              : "I am an **amazing** person."
   location         : "College Station, TX"
   email            :
