--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
     url: /_posts/
   - title: "Categories"
     url: /categories/
-  - title: "Tag"
-    url: /tag/
+  - title: "Tags"
+    url: /tags/
   - title: "About"
     url: /about/
   # - title: "About"
