--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,14 @@ main:
     url: /tags/
   - title: "About"
     url: /about/
+
+docs:
+  - title: "대목차"
+    children:
+      - title: "Category"
+        url: /categories/
+      - title: "Tags"
+        url: /tags/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
