--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "ko-KR"
 title                    : "Genius Sam"
 title_separator          : "|"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "Try, Try again." # site tagline that appears below site title in masthead
 name                     : "Sam"
 description              : "An amazing website."
 url                      : "https://SamuelJeon5.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Sam"
   avatar           : "/assets/images/avatar.jpeg"
-  bio              : "I am an **amazing** person."
+  bio              : "You know? I am an **amazing** person."
   location         : "College Station, TX"
   email            :
   links:
