--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "ko-KR"
 title                    : "Genius Sam"
 title_separator          : "|"
-subtitle                 : "Try, Try again." # site tagline that appears below site title in masthead
+subtitle                 : "Failed? Try, Try again." # site tagline that appears below site title in masthead
 name                     : "Sam"
 description              : "An amazing website."
 url                      : "https://SamuelJeon5.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
