--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Genius Sam"
+title                    : "Samuel Jeon's Blog"
 title_separator          : "|"
 subtitle                 : "Failed? Try, Try again." # site tagline that appears below site title in masthead
-name                     : "Sam"
-description              : "An amazing website."
+name                     : "Samuel Jeon"
+description              : "The blog run by a thinker who enjoys and learning new things."
 url                      : "https://SamuelJeon5.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -106,8 +106,8 @@ analytics:
 author:
   name             : "Sam"
   avatar           : "/assets/images/avatar.jpeg"
-  bio              : "You know? I am an **amazing** person."
-  location         : "College Station, TX"
+  bio              : "Cyber Security와 Machine Learning에 관심이 있습니다."
+  location         : "A Well-known Peninsula of the Earth"
   email            :
   links:
     - label: "Email"
